# APMCM-Problem-C

./: README.md  main.py  pyproject.toml
solve/: common.py  problem1.ipynb  problem2.ipynb  problem3.ipynb  problem4.ipynb  problem5.ipynb
问题一中国对其他三国大豆贸易额/: data2020export.csv  data2020import.csv  data2021export.csv  data2021import.csv  data2022export.csv  data2022import.csv  data2023import.csv  data2024export.csv  data2024import.csv  data2025import.csv
问题三数据/✅关税调整前后贸易统计数据/: 美国主要贸易伙伴对美反制措施后 进出口额变化.csv  美国产品出口 进口总量与结构（按国别 产业细分 覆盖2024年与2025年分月数据）.csv
问题三数据/✅国内消费价格与物价指数（CPI PPI）/: 美国汽车 家电 农产品等受关税影响显著品类的CPI  PPI 走势 (1).csv
问题三数据/✅美国与全球加权平均关税税率/: 美国与全球主要经济体2020-2025年历年、月度加权平均关税率.csv
问题二数据/✅关税与贸易政策数据/✅WTO“最惠国待遇”与关税优惠原则文件/: 1.txt
问题二数据/✅关税与贸易政策数据/✅美国对日本汽车及零部件的关税税率（2025调整后）/: 1.csv
问题二数据/✅宏观贸易与经济数据/✅全球汽车贸易关税追踪数据/: 1.csv
问题二数据/✅宏观贸易与经济数据/✅美日贸易逆差（汽车及零部件分项）/: 1.csv
问题二数据/✅日本车企非关税应对措施数据/✅日本汽车技术标准，认证政策（非关税壁垒）/: 1.txt
问题二数据/✅日本车企非关税应对措施数据/✅日本车企在墨西哥等国的生产布局，产能及对美出口量/: 1.csv
问题二数据/✅经济传递效应与产业影响数据/✅美国汽车产业就业人数，产量，供应链关联度/: 1.csv
问题二数据/✅经济传递效应与产业影响数据/✅美国汽车消费价格指数（CPI - 汽车类）/: 1.csv
问题二数据/✅美日汽车贸易与市场结构数据/✅美国汽车市场进口渗透率（2024-2025）/: 1.csv
问题五数据/: 主要贸易伙伴反制措施及受限品类（稀土、锂电池、农产品等）进出口明细.csv  全球主要经济体GDP、贸易增速、加权关税率季度.csv  制造业产出、就业及投资（出口型与本地型企业分布）.csv  美国关税结构与调整细节（2020-2025分行业、分国别）.csv  美国对外贸易量及价格（分行业、分国别、季度）.csv  美国物价指数（CPI、PPI）及产业链成本结构变化.csv
问题四数据/: CPI与PPI数据（受关税影响显著行业）.csv  主要贸易伙伴对美反制措施后进出口额变化（中欧、墨西哥等）.csv  全球主要经济体GDP与贸易增速、加权关税率数据.csv  美国关税收入年度明细财政部和海关.csv  美国关税结构及调整数据（2020-2025）.csv  美国制造业产出与就业数据（行业、出口型细分）.csv  美国对外贸易总量（按行业 国别 时间细分 季度）.csv
(+3 files in other folders)
